--- a/index.html
+++ b/index.html
@@ -4,25 +4,28 @@
     <meta charset="utf-8">
     <title>To Do List</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
 
   <section class="body">
     <header>
-      <h1>To Do List</h1>
+      <h1>todos</h1>
     </header>
 
     <div class="textBox">
+      <form>
       <input class="text" type="text" name="toDoList" value="">
-      <input class="submitButton" type="submit">
+      </form>
+      <!-- <input class="submitButton" type="submit"> -->
     </div>
 
     <div class="box">
       <div class="toDoContainer">
       </div>
       <footer>
-        <p><span></span> items left</p>
+        <p><span class="span"></span> items left</p>
         <div class="buttons">
         <button>All</button>
         <button>Active</button>
